k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\dev\kompose\kompose.exe --file .\docker-compose-prometheus.yml
      convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafana
    spec:
      containers:
      - env:
        - name: GF_SECURITY_ADMIN_PASSWORD
          value: P@ssw0rd
        image: grafana/grafana
        name: grafana
        ports:
        - containerPort: 3000
        resources: {}
        securityContext:
          runAsUser: 472
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-data
      restartPolicy: Always
      volumes:
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data
status: {}
