k8s/mongoapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mongoapi-env
  annotations:
  creationTimestamp: null
  labels:
    app: mongoapi
  name: mongoapi
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: mongoapi
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongoapi
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        - name: MONGODB_URL
          value: mongodb://mongodb:27017
        - name: PIPEDREAM_URL
          value: http://pipedream-external
        image: sebchevre/mongoapi:1.8.3-http
        name: mongoapi
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
