k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mongoapi-env
  creationTimestamp: null
  labels:
    app: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prometheus
    spec:
      containers:
      - image: prom/prometheus
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
          - name: config-volume
            mountPath: /etc/prometheus
      restartPolicy: Always
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
status: {}
