k8s/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: mongoapi-env
  labels:
    service: grafana
spec:
  ports:
    - protocol: TCP
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
status:
  loadBalancer: {}
