k8s/mongoapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongoapi-env
  annotations:
  creationTimestamp: null
  labels:
    service: mongoapi
  name: mongoapi
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: mongoapi
status:
  loadBalancer: {}
