k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mongoapi-env
  annotations:
  creationTimestamp: null
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongodb
status:
  loadBalancer: {}
