k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\dev\kompose\kompose.exe --file .\docker-compose-prometheus.yml
      convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  selector:
    io.kompose.service: prometheus
status:
  loadBalancer: {}
