k8s/grafana-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-ingress
  namespace: mongoapi-env
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: k8s.grafana.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
