k8s/mongoabi-imgress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodbapi-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: mongodbapi.sebchevre.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-api-node-port-service
            port: 
              number: 443
