k8s/mongoapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoapi-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: k8s.mongoapi.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongoapi
            port: 
              number: 80
