k8s/prometheus-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-ingress
  namespace: mongoapi-env
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: k8s.prometheus.org
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
